feat: Rename project to AI PDF Toolkit
This commit rebrands the application from "JPG to PDF Converter" to "AI PDF Toolkit". The scope of the application has been expanded to encompass a wider range of PDF manipulation tools, including merging, splitting, compression, and editing, in addition to AI-powered features like OCR, summarization, and translation.

The project name, metadata, and relevant UI elements have been updated to reflect this new identity and broader functionality. The file upload component has also been generalized to accept more file types beyond just images to support the expanded toolset.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF--8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image to PDF Converter | Free & Online</title>
-    <meta name="description" content="Easily convert your images (JPG, PNG, WEBP, and more) to a single PDF document. Free, fast, and secure online converter. No registration required." />
-    <meta name="keywords" content="image to pdf, jpg to pdf, png to pdf, webp to pdf, convert images to pdf, online pdf converter, free pdf converter" />
+    <title>AI PDF Toolkit | Convert, Merge, Edit & More</title>
+    <meta name="description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation. Fast, easy, and secure." />
+    <meta name="keywords" content="pdf converter, merge pdf, split pdf, compress pdf, edit pdf, ai pdf, pdf ocr, pdf summarizer, image to pdf, word to pdf" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://example.com/" />
-    <meta property="og:title" content="Image to PDF Converter | Free & Online" />
-    <meta property="og:description" content="Easily convert your images (JPG, PNG, WEBP, and more) to a single PDF document. Free, fast, and secure online converter." />
+    <meta property="og:title" content="AI PDF Toolkit | Convert, Merge, Edit & More" />
+    <meta property="og:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation." />
     <meta property="og:image" content="https://example.com/og-image.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://example.com/" />
-    <meta property="twitter:title" content="Image to PDF Converter | Free & Online" />
-    <meta property="twitter:description" content="Easily convert your images (JPG, PNG, WEBP, and more) to a single PDF document. Free, fast, and secure online converter." />
+    <meta property="twitter:title" content="AI PDF Toolkit | Convert, Merge, Edit & More" />
+    <meta property="twitter:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation." />
     <meta property="twitter:image" content="https://example.com/og-image.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -36,6 +36,7 @@
       }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
   <script type="importmap">
 {
   "imports": {
