feat: Add JPG to PDF and Word to PDF tools
Introduces new conversion tools for JPG to PDF and Word to PDF.
- Integrates the Mammoth library for Word document conversion.
- Enhances `FileUpload` component with custom titles, descriptions, and accept attributes.
- Updates `DownloadScreen` to support auto-download and custom file names.
- Restructures `App.tsx` to include new page routes.
- Refactors `HomePage.tsx` to display the new JPG to PDF tool.
- Updates `ConverterPage.tsx` and `MergePdfPage.tsx` to utilize enhanced `DownloadScreen` props.
- Adds a dedicated `JpgToPdfPage.tsx` component.
- Adds a dedicated `WordToPdfPage.tsx` component.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib/dist/pdf-lib.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.6.0/mammoth.browser.min.js"></script>
   <script type="importmap">
 {
   "imports": {
