refactor: Rename project to LOLOPDF and update metadata
Updates the project name from "AI PDF Toolkit" to "LOLOPDF" across various configuration and code files. This includes `package.json`, `index.html`, `metadata.json`, `App.tsx`, `Header.tsx`, and `Footer.tsx`.

Additionally, new tool routes and imports for PDF to JPG, Add Page Numbers, PDF to Word, PDF to Excel, and PDF to PowerPoint have been added to `App.tsx`. The `favicon.svg` and a new `HashIcon` component have also been introduced. Meta tags and descriptions in `index.html` have been updated to reflect the new branding and scope of tools.

--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF--8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI PDF Toolkit | Convert, Merge, Edit & More</title>
-    <meta name="description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation. Fast, easy, and secure." />
-    <meta name="keywords" content="pdf converter, merge pdf, split pdf, compress pdf, edit pdf, ai pdf, pdf ocr, pdf summarizer, image to pdf, word to pdf" />
+    <title>LOLOPDF | Free Online PDF Tools</title>
+    <meta name="description" content="The ultimate online toolkit to convert to and from PDF. Merge, split, compress, edit, add page numbers, and sign PDFs. Fast, easy, and secure." />
+    <meta name="keywords" content="pdf converter, jpg to pdf, pdf to jpg, pdf to word, pdf to excel, merge pdf, split pdf, compress pdf, edit pdf, add page numbers to pdf" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://example.com/" />
-    <meta property="og:title" content="AI PDF Toolkit | Convert, Merge, Edit & More" />
-    <meta property="og:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation." />
+    <meta property="og:title" content="LOLOPDF | Free Online PDF Tools" />
+    <meta property="og:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Fast, easy, and secure." />
     <meta property="og:image" content="https://example.com/og-image.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://example.com/" />
-    <meta property="twitter:title" content="AI PDF Toolkit | Convert, Merge, Edit & More" />
-    <meta property="twitter:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Featuring AI-powered tools for OCR, summarization, and translation." />
+    <meta property="twitter:title" content="LOLOPDF | Free Online PDF Tools" />
+    <meta property="twitter:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Fast, easy, and secure." />
     <meta property="twitter:image" content="https://example.com/og-image.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
