feat(PdfToJpg): Add zip functionality for bulk download
Introduces JSZip library and implements a new download mechanism for the PdfToJpgPage. Users can now download all converted JPG images as a single ZIP archive, improving convenience for bulk file handling.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pptxjs/3.12.0/pptx.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/4.1.7/signature_pad.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script type="importmap">
 {
   "imports": {
