--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <meta property="twitter:description" content="The ultimate online toolkit to convert, merge, split, compress, and edit PDF files. Fast, easy, and secure." />
     <meta property="twitter:image" content="https://example.com/og-image.png" />
 
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-6581052565817753">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6581052565817753"
+     crossorigin="anonymous"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       // On page load or when changing themes, best to add inline in `head` to avoid FOUC
