--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LOLOPDF | Free Online PDF Tools</title>
     <meta name="description" content="The ultimate online toolkit to convert to and from PDF. Merge, split, compress, edit, add page numbers, and sign PDFs. Fast, easy, and secure." />
     <meta name="keywords" content="pdf converter, jpg to pdf, pdf to jpg, pdf to word, pdf to excel, merge pdf, split pdf, compress pdf, edit pdf, add page numbers to pdf" />
-    
+    <meta name="google-site-verification" content="FDEfgyF54nakvKtCTjSYzbDsZI7xp6AnbHTFJhdxmBw" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://example.com/" />
